# agentic-leads

./: .env.shared.example  .envrc  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cursor/rules/: python-file-naming.mdc  react-ui-layering.mdc  supabase-ssr.mdc  typescript-file-naming.mdc  typescript-import-aliases.mdc  workflow-structure.mdc
apps/dashboard/: .env.example  middleware.ts  package.json  tsconfig.json
apps/docs/: package.json  tsconfig.json
apps/docs/app/: page.tsx
apps/web/: eslint.config.js  package.json
apps/workflow/: .env.example  .gitignore  README.md  db_workflow.py  install.sh  main.py  pyproject.toml  quick_start.py  runner.py  setup.py  supabase_io.py  test_poc.py  worker.py
apps/workflow/agentic_core/: __init__.py  logging.py  offline.py  orchestrator.py
apps/workflow/website_prospector/: __init__.py
apps/workflow/website_prospector/config/: audience_configs.py
apps/workflow/website_prospector/models/: types.py
apps/workflow/website_prospector/tools/: site_analyzer.py
apps/workflow/workflows/: __init__.py
apps/workflow/workflows/website_prospector/: __init__.py  pipeline.py
apps/workflow/workflows/website_prospector/agents/: __init__.py  analysis.py  contact.py  search.py
apps/workflow/workflows/website_prospector/config/: audience_configs.py
apps/workflow/workflows/website_prospector/tools/: __init__.py  analyze_site.py  contact.py  search.py  site_analyzer.py
docs/: implementation_plan.md  phases.md  tech_stack.md
supabase/: .gitignore  config.toml  package.json  seed.sql
(+31 files in other folders)
